Update SnapshotServiceImplTest.java